syntax = "proto3";

package MRA.FalconsTrajectoryGeneration;

import "datatypes/PosVel.proto";
import "datatypes/Pose.proto";


message Sample
{
    float t = 1;
    MRA.Datatypes.Pose position = 2;
    MRA.Datatypes.Pose velocity = 3;
}

message Output
{
    float duration = 1;
    int32 numTicks = 2;

    // all samples of the robot (position and velocity) in FCS, only (x,y,rz)

    MRA.Datatypes.PosVel final = 3;

    repeated Sample samples = 4;
}

